[#97] lower required java version, fix scaling on linux